<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:minHeight="65dp"
        android:theme="@style/Base.Theme.MandiriNews"
        android:visibility="visible"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:menu="@menu/menu_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/toolbar_logo_image"
                android:layout_width="54dp"
                android:layout_height="56dp"
                android:layout_margin="4dp"
                android:background="@color/bgMandiri"
                android:contentDescription="@string/image_news"
                android:src="@drawable/mandiri"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.15"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleImageView" />


            <TextView
                android:id="@+id/toolbar_title_custom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/basic_sans_alt_narrow_w00_bold"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/toolbar_logo_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <!-- Scroll View -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Headline News Title -->
            <TextView
                android:id="@+id/tvHeadlineNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/headline_news"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!-- Headline News RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHeadlineNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_row_news_horizontal" />

            <!-- All News Title -->
            <TextView
                android:id="@+id/tvAllNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/all_news"
                android:textSize="20sp" />

            <!-- All News RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAllNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                tools:listitem="@layout/item_row_news_vertical" />

            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
