<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="18dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="true"
    app:cardElevation="12dp"
    app:rippleColor="?attr/colorControlHighlight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent">

        <!-- CARD KHUSUS UNTUK GAMBAR -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                tools:src="@tools:sample/backgrounds/scenic" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:fontFamily="@font/archivo_bold"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/title_news"
                tools:text="@tools:sample/lorem" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <TextView
                    android:id="@+id/tv_src"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_source"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_date" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_date"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
